[package]
name = "onnx_graph"
version = "0.1.2"
edition = "2024"
description = "ONNX graph parser and execution engine for deep neural networks"
license = "MIT"
repository = "https://github.com/MihneaDarie/onnx_graph"


[dependencies]
rayon = "1.11.0"
anyhow = "1.0.100"
ndarray = { version = "0.17.1", features = ["rayon"] }
onnx-extractor = "0.3.3"
saker-rs = {version = "0.1.2"}
